# LLM_Informed_Ridge_Regression

./: .gitignore  README.md  cleanup_project.sh  main.py  pyproject.toml  requirements.txt
context/: config.py  test_covariance_model.py
context/guides/: EXPERIMENTS_README.md
context/templates/: experiment_classification_template.py  experiment_regression_template.py
notebooks/: Untitled-28.py
notebooks/ensemble/: clean_ensemble_diabetes.ipynb  ensemble_diabetes.ipynb  ensemble_testing.ipynb  testing_gender_ensemble.ipynb
notebooks/exploratory/: 14_sep.ipynb  14_sep_copy.ipynb  16_sep.ipynb  OOD_testing.ipynb  first_testing.ipynb  mimic_16.09.ipynb  mimic_2.ipynb  performance_testing.ipynb
notebooks/priors/: ridge_diabetes.ipynb  testing_custom_ridge.ipynb  testing_gender_ridge.ipynb  wilds.ipynb
rag/: prompt_matrics_practice.py  prompt_metrics.py
src/llm/: prior_elicitor.py  target_elicitor.py
src/llm_prior_project/: run_logging.py
src/llm_prior_project/data/: causal_selector_utils.py  experiment_runner.py  llm_ensemble_utils.py  regularisation_utils.py
src/llm_prior_project/models/: testing_pipeline.py
src/llm_prior_project/priors/: covariance_target_informed_ridge.py  expert_ridge.py  llm_guided_feature_expansion.py  llm_prior_elicitor.py  target_elicitor.py  target_informed_model.py  testing.ipynb
src/models/: custom_ridge.py  expert_ridge.py  llm_ensemble_utils.py  regularisation_utils.py  sentence_transformer.py  target_informed_model_causal.py  target_model.py
tests/: Tests_for_custom_ridge.py
