[project]
name = "llm_prior_project"
version = "0.1.0"
description = "LLM-based prior construction and statistical learning tools."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "joblib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "notebook",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
